# FlutterSentinel

./: .env  .gitattributes  .gitignore  CHANGELOG.md  CHEATSHEET.md  COMPREHENSIVE_TESTING_REPORT.md  CURRENT_STATUS_SUMMARY.md  FEATURES.md  FINAL_BUG_BOUNTY_REPORT.md  MINT_MOBILE_COMPLETE.md  MINT_MOBILE_CRITICAL_REPORT.md  MINT_MOBILE_FINDINGS_SUMMARY.md  MINT_SUCCESSFUL_BYPASS_REPORT.md  QUICKSTART.md  README.md  STARTUP_GUIDE.md  __init__.py  bounty_hunt.py  comprehensive_project_documentation.md  config.py  example.env  fbh.sh  full_mintsdk_strings.txt  guid_finder.py  kiro  kiro.py  kiro_hooks.py  maintask.md  mobsf_report.json  p12_rockyou_cracker.py  package-lock.json  package.json  pull_db.py  quickstart.sh  requirements.md  run.sh  run_tests.py  sentinel_activator.py  sentinel_kernel_poc  sentinel_kernel_poc.c  (+12 more)
.antigravity/: memory.md  spec.md
MOBSF/: manage.py  run.sh  setup.sh
ai/: __init__.py  (+2 more)
native/vphone/: CMakeLists.txt  Makefile  vphone-c  vzbridge-bin
native/vphone/.limd/lib/: libimobiledevice-1.0.la  libimobiledevice-glue-1.0.la  libirecovery-1.0.la  libplist++-2.0.la  libplist-2.0.la  libtatsu.la  libusbmuxd-2.0.la
native/vphone/.limd/lib/cmake/libzip/: libzip-targets.cmake
native/vphone/.limd/lib/pkgconfig/: libimobiledevice-1.0.pc  libimobiledevice-glue-1.0.pc  libirecovery-1.0.pc  libplist++-2.0.pc  libplist-2.0.pc  libtatsu-1.0.pc  libusbmuxd-2.0.pc  libzip.pc
native/vphone/docs/: AppleSilicon_Setup.md
native/vphone/frontend/: README.md  pubspec.yaml
native/vphone/frontend/lib/: main.dart
native/vphone/frontend/lib/bloc/: vphone_bloc.dart  vphone_event.dart  vphone_state.dart
native/vphone/frontend/lib/screens/: dashboard_screen.dart  simulator_screen.dart
native/vphone/frontend/lib/services/: log_service.dart  vphone_builder_service.dart  vphone_native_bridge.dart
native/vphone/frontend/lib/widgets/: device_frame.dart  ios_status_bar.dart
native/vphone/frontend/linux/: CMakeLists.txt
native/vphone/frontend/linux/runner/: my_application.cc
native/vphone/frontend/macos/Runner.xcodeproj/: project.pbxproj
native/vphone/frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
native/vphone/frontend/macos/Runner/Configs/: AppInfo.xcconfig
native/vphone/frontend/test/: widget_test.dart
native/vphone/frontend/windows/: CMakeLists.txt
native/vphone/frontend/windows/runner/: Runner.rc  main.cpp
native/vphone/include/vphone/: Automator.hpp  Bypass.hpp  HostProfile.hpp  Im4p.hpp  Inventory.hpp  Parity.hpp  Patcher.hpp  Plist.hpp  Prepare.hpp  Probe.hpp  Runtime.hpp  vphone_core.h  vphone_runtime.h
native/vphone/include/vphone/core/application/use_cases/: DeviceBootUseCase.hpp  PatchFirmwareUseCase.hpp
native/vphone/include/vphone/core/domain/interfaces/: IDeviceManager.hpp  IHypervisor.hpp  IPatcher.hpp  ITextureBridge.hpp
native/vphone/include/vphone/core/infrastructure/device/: LibimobiledeviceAdapter.hpp
native/vphone/include/vphone/core/infrastructure/display/: MetalTextureBridge.hpp
native/vphone/include/vphone/core/presentation/c_api/: vphone_ffi.h
native/vphone/scripts/: fix_boot_host_26.3.py
native/vphone/src/: Bypass.cpp  HostProfile.cpp  Im4p.cpp  Inventory.cpp  Parity.cpp  Plist.cpp  Prepare.cpp  Probe.cpp  Runtime.cpp  main.cpp  vphone_runtime.cpp
native/vphone/src/core/application/use_cases/: DeviceBootUseCase.cpp  PatchFirmwareUseCase.cpp
native/vphone/src/core/infrastructure/: Automator.cpp  Im4p.cpp
native/vphone/src/core/infrastructure/device/: LibimobiledeviceAdapter.cpp
native/vphone/src/core/infrastructure/display/: MetalTextureBridge.mm
native/vphone/src/core/infrastructure/patchers/: Patcher.cpp
native/vphone/src/core/presentation/c_api/: vphone_ffi.cpp
native/vphone/src/core/presentation/cli/: Runtime.cpp  main.cpp  vphone_runtime.cpp
native/vphone/src/frontend/macos_vmapple/vzbridge/: Package.swift  README.md  build-vzbridge.sh  vphone  vphone-headless  vzbridge.entitlements
native/vphone/src/frontend/macos_vmapple/vzbridge/.build/: plugin-tools.yaml  workspace-state.json
native/vphone/src/frontend/macos_vmapple/vzbridge/.build/arm64-apple-macosx/release/: plugin-tools-description.json  vzbridge
native/vphone/src/frontend/macos_vmapple/vzbridge/.build/repositories/Dynamic-fab72b8c/: FETCH_HEAD  config  packed-refs
native/vphone/src/frontend/macos_vmapple/vzbridge/Sources/VZBridge/: VPhoneUI.swift  VZBridge.swift
native/vphone/src/frontend/macos_vmapple/vzbridge/VPhone.app/Contents/: Info.plist
native/vphone/src/frontend/macos_vmapple/vzbridge/VPhone.app/Contents/MacOS/: vphone
native/vphone/tests/core/application/: test_PatchFirmwareUseCase.cpp
native/vphone/tools/vphone-builder/: setup-linux.sh
native/vphone/vzbridge/: Package.swift  build-vzbridge.sh  vzbridge  vzbridge.entitlements
native/vphone/vzbridge/Sources/VZBridge/: VPhoneUI.swift  VZBridge.swift
(+51630 files in other folders)
